@@ -1,8 +1,8 @@
-.ba { border: 1px solid var(--border-color); }
-.bl { border-left: 1px solid var(--border-color); }
-.br { border-right: 1px solid var(--border-color); }
-.bt { border-top: 1px solid var(--border-color); }
-.bb { border-bottom: 1px solid var(--border-color); }
+.ba { border: var(--border-width) solid var(--border-color); }
+.bl { border-left: var(--border-width) solid var(--border-color); }
+.br { border-right: var(--border-width) solid var(--border-color); }
+.bt { border-top: var(--border-width) solid var(--border-color); }
+.bb { border-bottom: var(--border-width) solid var(--border-color); }
 
 .br1 { border-radius: .125rem; }
 .br2 { border-radius: .25rem; }
@@ -58,7 +58,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  min-width: var(--div-size);
-  min-height: var(--div-size);
+  min-width: var(--border-width);
+  min-height: var(--border-width);
   background-color: currentColor;
 }
