@@ -9,6 +9,7 @@
   --background-color: var(--white, white);
   --text-color: var(--black, black);
   --link-color: var(--blue, blue);
+  --border-width: 1px;
   --border-color: currentColor;
   --bold-font-weight: bold;
 
@@ -33,8 +34,6 @@
   --lh3: 1.375;     /* 22 */
   --lh4: 1.5;       /* 24 */
   --lh5: 2;         /* 32 */
-
-  --div-size: 1px;
 
   --black:  #040404;
   --white:  #ffffff;
